--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Cabbages"
-author: "Put your name here!"
-date: "put the date here"
+author: "Kimberly Orantes"
+date: "September 2, 2021"
 output:
   html_document:
     df_print: paged
