graphical descriptive results

--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -37,7 +37,11 @@ I will use variable analysis, descriptive analysis, and inferential analysis.
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+boxplot(VitC~Cult,data=veggy)
+```
 
+From the c39 v. c52 graph we can see that the cultivation method, c52 has a higher median of vitamin C than the cultivation method, c39. c39 has a median of about 51 of vitamin C and c52 has a median of about 65 of vitamin C. There is quite a difference between the medians, about a 14 vitamin C difference.
 
 ### Numerical Descriptive Results
 
