--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -47,6 +47,12 @@ From the c39 v. c52 graph we can see that the cultivation method, c52 has a high
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+favstats(VitC~Cult,data=veggy)
+```
+
+The average of the vitamin C in the c39 cultivation method is 51.5. The average of the vitamin C in the c52 cultivation method is 70.75. As we can see there is a difference in the the average amount of vitamin C between the two cultivation methods. The difference is 19.25 of vitamin C, with c52 have a greater average.  
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
