--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -51,13 +51,18 @@ From the c39 v. c52 graph we can see that the cultivation method, c52 has a high
 favstats(VitC~Cult,data=veggy)
 ```
 
-The average of the vitamin C in the c39 cultivation method is 51.5. The average of the vitamin C in the c52 cultivation method is 70.75. As we can see there is a difference in the the average amount of vitamin C between the two cultivation methods. The difference is 19.25 of vitamin C, with c52 have a greater average.  
-
+The average of the vitamin C in the c39 cultivation method is 51.5. The average of the vitamin C in the c52 cultivation method is 64.4. As we can see there is a difference in the the average amount of vitamin C between the two cultivation methods. The difference is 12.9 of vitamin C, with c52 have a greater average.  
+  
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(VitC~Cult,data=veggy)
+```
 
+
+  
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
